# TrafficSignsClassification_DeepLearing

./: README.md  Traffic_Signs_Classification_using_CNN.ipynb  app.py  pyproject.toml  requirements.txt
model/: TSR.h5
templates/: base.html  index.html
