[tool.poetry]
name = "repl_nix_TrafficSignsClassification"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.5.0"
Werkzeug = "^2.2.3"
Flask = "^2.2.3"
keras = "^2.12.0"
numpy = "^1.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
